--- a/app/design/frontend/base/default/template/inchoo/catalog/reviews.phtml
+++ b/app/design/frontend/base/default/template/inchoo/catalog/reviews.phtml
@@ -1,14 +1,5 @@
 <?php
-    $_product = $this->product;
-    $reviewCollection = Mage::getModel('review/review')->getCollection()->setPageSize(1)
-                            ->addStoreFilter(Mage::app()->getStore()->getId())
-                            ->addStatusFilter(Mage_Review_Model_Review::STATUS_APPROVED)
-                            ->addEntityFilter('product', $_product->getId())
-                            ->setDateOrder()
-                            ->addRateVotes();
-
-    $_items = $reviewCollection->getItems();
-
+    $_items = $this->getReviewData()->getItems();
     foreach ($_items as $_review):
         ?>
         <dt>
