--- a/app/design/frontend/base/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list.phtml
@@ -54,7 +54,13 @@
                     <?php $_productNameStripped = $this->stripTags($_product->getName(), null, true); ?>
                     <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $_productNameStripped; ?>"><?php echo $_helper->productAttribute($_product, $_product->getName() , 'name'); ?></a></h2>
                     <?php if($_product->getRatingSummary()): ?>
-                    <?php echo $this->getReviewsSummaryHtml($_product) ?>
+<!--                    --><?php //echo $this->getReviewsSummaryHtml($_product) ?>
+                        <!--                    inchoo start-->
+                        <?php
+                        $this->getChild('inchoo_reviews')->setData('product', $_product->getId());
+                        echo $this->getChildHtml('inchoo_reviews', false);
+                        ?>
+                        <!--                    inchoo end-->
                     <?php endif; ?>
                     <?php echo $this->getPriceHtml($_product, true) ?>
                     <?php if($_product->isSaleable()): ?>
@@ -66,12 +72,6 @@
                         <?php echo $_helper->productAttribute($_product, $_product->getShortDescription(), 'short_description') ?>
                         <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $_productNameStripped ?>" class="link-learn"><?php echo $this->__('Learn More') ?></a>
                     </div>
-                    <!--                    inchoo start-->
-                    <?php
-                        $this->getChild('inchoo_reviews')->setData('product', $_product);
-                        echo $this->getChildHtml('inchoo_reviews');
-                    ?>
-                    <!--                    inchoo end-->
                     <ul class="add-to-links">
                         <?php if ($this->helper('wishlist')->isAllow()) : ?>
                             <li><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a></li>
