Product rating in cart - clean

--- a/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
@@ -47,8 +47,7 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
                                ->setStoreId($storeId)
                                ->load($_product->getId());
 
-            if (count($summaryData['rating_summary'])):
-                ?>
+            if (count($summaryData['rating_summary'])):?>
                 <div class="ratings">
                     <div class="rating-box">
                         <div class="rating" style="width:<?php echo $summaryData['rating_summary']; ?>%"></div>
